<resources>
    <string name="app_name">EveryWherreTrip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_more_service">你好,为了获取更好的服务</string>
    <string name="login_app">请登录伴米旅行(楼舒)</string>
    <string name="coutry_code">+86</string>
    <string name="input_phone">请输入手机号</string>
    <string name="send_verify">发送验证码</string>
    <string name="or">or</string>
    <string name="agree_protocol">登录或者注册即同意伴米旅行用户协议</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>
    <string name="oauth_ok">成功了</string>
    <string name="oauth_error">失败了</string>
    <string name="oauth_cancel">取消了</string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">登录失败</string>
    <string name="send_again">重新发送</string>
    <string name="input_code">请输入验证码</string>
    <string name="wait_please">请稍后...</string>
    <string name="send_newAgain">重新发送</string>
    <string name="touist">游客</string>
    <string name="no_signature">四肢不全五体不勤好吃懒做</string>
    <string name="compile">编辑</string>
    <string name="wallet">我的钱包</string>
    <string name="money">99</string>
    <string name="unit">元</string>
    <string name="bonus">赢取奖金</string>
    <string name="coupon">我的卡券</string>
    <string name="journey">已购行程</string>
    <string name="collect">我的收藏</string>
    <string name="attention">我的关注</string>
    <string name="service">联系客服</string>
    <string name="feedback">意见反馈</string>
    <string name="versions">版本检测</string>
    <string name="agentweb_click_open">Tap to continue</string>
    <string name="message">个人信息</string>
    <string name="approach">获取途径</string>
    <string name="head">头像</string>
    <string name="name">用户昵称</string>
    <string name="username">伴小米</string>
    <string name="sexs">性别</string>
    <string name="sex">保密</string>
    <string name="signatures">个性签名</string>
    <string name="signature">四肢不全五体不勤</string>
    <string name="psw">修改密码</string>
    <string name="phone">绑定手机</string>
    <string name="exit_login">退出登录</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="abolish">取消</string>
    <string name="myPhoto">个人头像</string>
    <string name="no">取消</string>
    <string name="camera">拍照</string>
    <string name="photo">从手机相册选择</string>
    <string name="send_name">修改昵称</string>
    <string name="out">完成</string>
    <string name="mEtsize">30/30 </string>
    <string name="experience_immediately">立即体验</string>
    <string name="pager_tv3">智能地图为你导路</string>
    <string name="pager_tv2">智能语音实时导览</string>
    <string name="pager_te">严选当地人的私藏线路</string>
    <string name="login_qq">QQ登录</string>
    <string name="login_wechar">微信登录</string>
    <string name="login_webo">微博登录</string>
    <string name="evaluation">查看全部评价</string>
    <string name="share">分享</string>
    <string name="collect_default">已收藏</string>
    <string name="line">开始线路</string>
    <string name="many">¥30.00</string>
    <string name="collects">收藏</string>
    <string name="cost">¥30.00</string>
    <string name="details">伴米详情</string>
    <string name="dynamic">动态</string>
    <string name="line_path">线路</string>
    <string name="not_attention">未关注</string>
    <string name="atten">已关注</string>
    <string name="projectlist">旅行专题</string>
    <string name="just">刚刚</string>
    <string name="all_state">所有状态</string>
    <string name="update">更新了一条语音</string>
    <string name="thumb">2</string>
    <string name="top">88</string>
    <string name="tv_time">5小时前</string>
    <string name="upload_the_dynamic">上传了一条动态</string>
    <string name="headline">这里是一个标题</string>
    <string name="send_state">上传了一条动态</string>
    <string name="appraise">全部评价</string>

</resources>
