<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_999"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
             android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
             android:text="@string/camera"
             android:textSize="@dimen/sp_20"
             android:gravity="center"
             android:id="@+id/mTv_camera"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_1"
             android:background="@color/c_666"/>
         <TextView
             android:textColor="@color/white"
             android:id="@+id/mTv_photo"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
             android:text="@string/photo"
             android:textSize="@dimen/sp_20"
             android:gravity="center"/>

         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_5"
             android:background="@color/black"/>
         <TextView
             android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
             android:text="@string/no"
             android:id="@+id/mTv_noss"
             android:textSize="@dimen/sp_20"
             android:gravity="center"/>





</LinearLayout>