<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_10"
        android:layout_margin="@dimen/dp_15" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/mTv_nos"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:text="@string/nan"
                android:textSize="@dimen/sp_20"
                android:gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/c_e0e0e0"/>
            <TextView
                android:id="@+id/mTv_man"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:text="@string/nv"
                android:textSize="@dimen/sp_20"
                android:gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/c_e0e0e0"/>
            <TextView
                android:id="@+id/mTv_lady"
                android:text="@string/sex"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:textSize="@dimen/sp_20"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_10"
        android:layout_margin="@dimen/dp_15">
        <TextView
            android:id="@+id/mTv_secrecy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/c_fa6a13"
            android:text="@string/abolish"
            android:gravity="center"/>
    </android.support.v7.widget.CardView>
</LinearLayout>