<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MessageActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/mTool_mess"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42">

        <ImageView
            android:id="@+id/img_replace"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@mipmap/back_white" />

        <TextView
            android:gravity="center"
            android:text="@string/message"
            android:textColor="@color/c_333"
            android:textSize="@dimen/sp_16"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/approach"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/c_666"
        android:layout_margin="@dimen/dp_12"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_14" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_6"
        android:layout_margin="@dimen/dp_10">

    <LinearLayout
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout

            android:id="@+id/coupon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_52"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_marginTop="@dimen/dp_18"
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head"
                android:textColor="@color/c_333"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:id="@+id/img_head"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_6"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginRight="@dimen/dp_14"
            android:background="@color/c_f0" />

        <RelativeLayout
            android:id="@+id/journey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_52"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_marginTop="@dimen/dp_17"
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/c_333"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/mTv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/username"
                android:textColor="@color/c_999"
                android:textSize="@dimen/sp_14"
                android:layout_marginRight="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_17"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/c_f0" />

        <RelativeLayout
            android:id="@+id/collect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_52"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_marginTop="@dimen/dp_17"
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexs"
                android:textColor="@color/c_333"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_marginTop="@dimen/dp_17"
                android:layout_marginRight="@dimen/dp_14"
                android:id="@+id/mTv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/sex"
                android:textColor="@color/c_999"
                android:textSize="@dimen/sp_14" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/c_f0" />

        <RelativeLayout
            android:id="@+id/attention"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_52"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signatures"
                android:textColor="@color/c_333"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_17"/>

            <TextView
                android:layout_marginRight="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_17"
                android:id="@+id/mTv_sig"
                android:layout_width="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:maxWidth="@dimen/dp_156"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/signature"
                android:textColor="@color/c_999"
                android:textSize="@dimen/sp_14" />

        </RelativeLayout>


    </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/dp_23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_6"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/out_psw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_53"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psw"
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_18"
                android:textColor="@color/c_333"
                android:textSize="@dimen/sp_14"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_17"
            android:layout_marginRight="@dimen/dp_19"
            android:background="@color/c_f0" />

        <RelativeLayout
            android:id="@+id/out_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_57"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginTop="@dimen/dp_18"
                android:layout_marginLeft="@dimen/dp_14"
                android:textColor="@color/c_333"
                android:textSize="@dimen/sp_14" />

        </RelativeLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>
    <Button
        android:id="@+id/mBut_exit"
        android:text="@string/exit_login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:background="@drawable/back_change"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_28"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40" />
</LinearLayout>