<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.LoginFragment">



    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_73"
        android:text="@string/for_more_service"
        android:textColor="@color/c_fa6a13"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tv_isLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_hello"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_9"
        android:text="@string/login_app"
        android:textColor="@color/c_373737"
        android:textSize="@dimen/sp_27" />


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_isLogin"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_106"
        android:layout_marginRight="@dimen/dp_23"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/phone" />

        <TextView
            android:textSize="@dimen/sp_14"
            android:id="@+id/tv_86"
            android:textColor="@color/c_636363"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+86" />

        <ImageView
            android:id="@+id/iv_select"
            android:layout_width="@dimen/dp_7"
            android:layout_height="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_2"
            android:src="@mipmap/select" />

        <EditText
            android:textColorHighlight="@color/c_c8c8c8"
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_weight="1"
            android:inputType="phone"
            android:background="@null"
            android:hint="@string/input_phone"
            android:textSize="@dimen/sp_16"/>

        <Button
            android:id="@+id/btn_Verification"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/shape_no"
            android:text="@string/send_verify"
            android:textColor="@color/c_FEFEFE"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@id/ll_phone"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_23"
        android:background="@color/c_fa6a13" />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/ll_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginTop="@dimen/dp_140"
        android:gravity="center_vertical">

       <View
           android:background="@drawable/gra_d8_a9"
           android:layout_width="@dimen/dp_15"
           android:layout_height="@dimen/dp_1"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/dp_5"
           android:text="@string/or"
           android:textSize="@dimen/sp_14"
           android:textColor="@color/c_a9a9a9"/>

       <View
           android:layout_marginLeft="@dimen/dp_5"
           android:background="@drawable/gra_a9_d8"
           android:layout_width="@dimen/dp_15"
           android:layout_height="@dimen/dp_1"/>

    </LinearLayout>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_or"
        android:layout_marginTop="@dimen/dp_6"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_80"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imgQQ"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:background="@color/c_eeeeee"
                android:src="@mipmap/qq" />

            <TextView
                android:layout_width="@dimen/dp_51"
                android:layout_height="@dimen/dp_17"
                android:gravity="center"
                android:text="@string/login_qq"
                android:textColor="@color/c_4DAE46"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_80"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgWeChat"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:background="@color/c_eeeeee"
                android:src="@mipmap/wechat" />

            <TextView
                android:layout_width="@dimen/dp_51"
                android:layout_height="@dimen/dp_17"
                android:gravity="center"
                android:text="@string/login_wechar"
                android:textColor="@color/c_4DAE46"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_80"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imgWB"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:background="@color/c_eeeeee"
                android:src="@mipmap/sina" />

            <TextView
                android:layout_width="@dimen/dp_51"
                android:layout_height="@dimen/dp_17"
                android:gravity="center"
                android:text="@string/login_webo"
                android:textColor="@color/c_4DAE46"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_20"
      android:textColor="@color/c_999"
        android:text="@string/agree_protocol"
        android:textSize="@dimen/sp_13" />
</RelativeLayout>