<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.Personage_DataActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/mTool_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_replace"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:src="@mipmap/back_white" />

            <TextView
                android:id="@+id/mTv_pers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/send_name"
                android:textColor="@color/c_333"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/mTv_outs"
                android:layout_width="@dimen/dp_28"
                android:layout_height="@dimen/dp_17"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/out"
                android:textColor="@color/c_fa6a13"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <View
        android:id="@+id/view_per"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_130"
        android:layout_below="@id/mTool_data"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/c_f0" />

    <EditText
        android:id="@+id/mEt_per"
        android:padding="@dimen/dp_10"
        android:hint="@string/app_name"
        android:gravity="left"
        android:maxLength="27"
        android:textColor="@color/c_999"
        android:textSize="@dimen/sp_14"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_93"
        android:layout_alignTop="@id/view_per"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10" />

    <TextView
        android:id="@+id/mTv_perSize"
        android:text="@string/mEtsize"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/c_999"
        android:layout_alignBottom="@id/view_per"
        android:layout_alignRight="@id/view_per"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginRight="@dimen/sp_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>