<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        app:cardCornerRadius="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_450">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_450">

            <ImageView
                android:id="@+id/img_back"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_116"
                android:background="@color/c_60"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_36"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_27"
                    android:layout_marginRight="@dimen/dp_15">

                    <TextView
                        android:maxLines="1"
                        android:id="@+id/mTv_title"
                        android:layout_width="@dimen/dp_75"
                        android:layout_height="@dimen/dp_37"
                        android:text="@string/send_again"
                        android:textColor="@color/c_373737"
                        android:textSize="@dimen/sp_26" />

                    <ImageView
                        android:id="@+id/ic"
                        android:layout_width="@dimen/dp_10"
                        android:layout_height="@dimen/dp_12"
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@id/mTv_title"
                        android:src="@mipmap/icon_en" />

                    <TextView
                        android:maxLines="1"
                        android:id="@+id/mTv_area"
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_20"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/dp_32"
                        android:layout_toRightOf="@id/ic"
                        android:text="@string/send_again"
                        android:textColor="@color/c_999"
                        android:textSize="@dimen/sp_14" />

                    <Button
                        android:id="@+id/mBtn_price"
                        android:layout_width="@dimen/dp_74"
                        android:layout_height="@dimen/dp_29"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:background="@drawable/shape_ok"
                        android:text="@string/wait_please"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_15" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_25"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_15">

                    <TextView
                        android:maxLines="1"
                        android:id="@+id/mTv_str"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_25"
                        android:text="@string/agentweb_click_open"
                        android:textColor="@color/c_636363"
                        android:textSize="@dimen/sp_18" />

                    <TextView
                        android:id="@+id/mTv_quantity"
                        android:layout_width="@dimen/dp_61"
                        android:layout_height="@dimen/dp_17"
                        android:layout_alignParentRight="true"
                        android:text="@string/agentweb_click_open"
                        android:textColor="@color/c_636363"
                        android:textSize="@dimen/sp_12" />
                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>